# VeriBond

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  render.yaml  requirements.txt  veribond.md
admin/: README.md  __init__.py
admin/app/: index.html  package-lock.json  package.json
admin/app/src/: App.tsx  index.css
admin/server/: __init__.py  app.py  log_buffer.py
contracts/: .env.example  README.md  deployments.base-sepolia.latest.json  foundry.toml
contracts/script/: Deploy.s.sol  DeployAgentNames.s.sol  DeployL2Registry.s.sol  DeployLiquidityManagerOnly.s.sol  DeployTokenSale.s.sol  DeployUMAResolver.s.sol  DeployVeriBondRegistrar.s.sol  FinalizeAuctionLiquidity.s.sol  RegisterBasename.s.sol  TestDeployment.s.sol
contracts/src/identity/: OwnerBadge.sol
contracts/src/interfaces/: IIdentityRegistry.sol  (+4 more)
contracts/test/: AgentTokenFactoryLiquidityIntegration.t.sol  OwnerBadge.t.sol  PostAuctionLiquidityManager.t.sol  TruthStake.t.sol  UMAResolver.t.sol
docs/: semantic_integration.md
frontend/: README.md  package-lock.json  package.json
frontend/scripts/: deploy-updated-contracts.mjs  run-indexer-sync.mjs
frontend/src/: debug_state.ts
scripts/: README.md  debug_state.ts  gemini-agent.mjs  package-lock.json  package.json  register-agent.ts  register-direct.ts  set-agent-wallet.ts  test-claim-flow.ts  tsconfig.json
semantic_agent/: README.md  __init__.py  config.py  logging_utils.py  store.py
semantic_agent/api/: __init__.py
semantic_agent/mcp/: __init__.py
semantic_agent/models/: __init__.py  market.py
semantic_agent/pipeline/: __init__.py  cluster.py  embed.py  evaluate.py  ingest.py  label.py  relations.py  reset.py  run_full.py
(+65 files in other folders)
